fixed slide menu causing page to have horizontal scroll

--- a/public/stylesheets/slide-menu.css
+++ b/public/stylesheets/slide-menu.css
@@ -2,7 +2,7 @@
  
 .cbp-spmenu {
     background: #f2f2f2;
-    position: absolute;
+    position: fixed;
 }
  
 .cbp-spmenu h3 {
